--- a/.gitignore
+++ b/.gitignore
@@ -64,4 +64,9 @@ coverage.xml
 # Thư mục AI model (nếu có)
 models/
 model_cache/
-.hf_cache/ 
+.hf_cache/
+
+# Environment configuration files
+.env*
+# Cụ thể .env.docker để chắc chắn
+.env.docker 
