--- a/requirements.txt
+++ b/requirements.txt
@@ -17,13 +17,13 @@ rich>=13.7.0
 argparse>=1.4.0
 requests>=2.32.0
 asyncio>=3.4.3
-langchain==0.3.25
-langchain-core==0.3.59
-langchain-community==0.3.24
-langchain-ollama==0.3.2
+langchain-core==0.3.60
+langsmith==0.3.42
+tenacity==8.5.0
+packaging==23.2
 ollama==0.4.8
 google-generativeai>=0.7.0
 tiktoken>=0.5.0
-tenacity>=8.2.0
 aiocache>=0.12.1
 cryptography
+ruff>=0.1.6
