Cập nhật .env.example với cấu hình mới cho Gemini API, bao gồm danh sách khóa API và các thông số cho Pinecone. Xóa tệp auth.py không còn sử dụng và loại bỏ router auth trong main.py. Cập nhật requirements.txt để thêm các thư viện cần thiết và cải thiện cấu hình trong config.py. Thêm các mô hình mới vào models.py và cải thiện logic trong chat.py để sử dụng thông tin người dùng đã xác thực từ backend. Cải thiện logging và xử lý lỗi trong middleware auth. Chưa hoàn thành việc kiểm tra toàn bộ mã nguồn để loại bỏ các khoảng trắng không cần thiết khác.

--- a/.env.example
+++ b/.env.example
@@ -33,4 +33,29 @@ SUMMARY_THRESHOLD=10
 
 # Gemini API Configuration
 GEMINI_API_KEY=YOUR_GEMINI_API_KEY
-GEMINI_API_URL=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent 
+GEMINI_API_URL=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent
+GEMINI_MODEL=gemini-2.0-flash-lite
+
+# ⭐ API KEY MANAGER CONFIGURATION cho Load Balancing
+# Cách 1: Sử dụng danh sách keys phân cách bằng dấu phẩy (ưu tiên)
+GEMINI_API_KEYS_LIST=your_primary_key,your_secondary_key,your_backup_key,your_fourth_key
+
+# Cách 2: Sử dụng individual keys (backup method)
+# GEMINI_API_KEY_1=your_primary_gemini_key
+# GEMINI_API_KEY_2=your_secondary_gemini_key  
+# GEMINI_API_KEY_3=your_backup_gemini_key
+# GEMINI_API_KEY_4=your_fourth_gemini_key
+
+# ⭐ LỢI ÍCH CỦA MULTIPLE API KEYS:
+# - Giảm thiểu rate limiting từ Google Gemini
+# - Tăng throughput với concurrent API calls
+# - Fault tolerance nếu một key bị disable
+# - Load balancing tự động với round-robin
+
+BACKEND_AUTH_VERIFY_URL=http://localhost:8000/api/auth/verify-token
+
+PRODUCT_DB_PINECONE_API_KEY=YOUR_PRODUCT_PINECONE_API_KEY
+PINECONE_INDEX_NAME=product-index
+
+RECIPE_DB_PINECONE_API_KEY=YOUR_RECIPE_PINECONE_API_KEY
+PINECONE_ENVIRONMENT=gcp-starter 
