--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,47 @@
+# Web Framework & API
 fastapi==0.110.0
 uvicorn==0.28.0
+python-multipart==0.0.6
+httpx>=0.27.0,<0.29.0
+
+# Database & ORM
 sqlalchemy==2.0.26
 pymysql==1.1.0
 mysql-connector-python==8.2.0
 protobuf==4.21.12
+
+# Cache & Session
 redis==5.0.1
+
+# Authentication & Security
 python-jose==3.3.0
-python-dotenv==1.0.0
-httpx>=0.27.0,<0.29.0
 passlib==1.7.4
 bcrypt==4.0.1
+cryptography
+
+# Configuration
+python-dotenv==1.0.0
 pydantic==2.11.4
 pydantic-settings==2.9.1
-python-multipart==0.0.6
-rich>=13.7.0
-argparse>=1.4.0
-requests>=2.32.0
-asyncio>=3.4.3
+
+# AI & Language Processing
+google-generativeai>=0.7.0
 langchain-core==0.3.60
 langsmith==0.3.42
+langgraph>=0.4.2
+ollama==0.4.8
+tiktoken>=0.5.0
+pinecone-client==3.2.2
+
+# Windows compatibility
+pyreadline3>=3.5.0;platform_system=="Windows"
+
+# Utilities
+requests>=2.32.0
+asyncio>=3.4.3
 tenacity==8.5.0
 packaging==23.2
-ollama==0.4.8
-google-generativeai>=0.7.0
-tiktoken>=0.5.0
 aiocache>=0.12.1
-cryptography
+rich>=13.7.0
+argparse>=1.4.0
 ruff>=0.1.6
-langgraph>=0.4.2
